fix dakenimg spacing

--- a/styles.css
+++ b/styles.css
@@ -52,7 +52,7 @@ a {
     width:300px;
     height: 400px;
     flex-grow: 1;
-    padding-left: 60rem;
+    padding-left: 55rem;
 }
 
 .headertext {
